Add WIP dark color scheme.
It's only present by specifying DARK_COLORS_AVAILABLE=True in .env. When present, it follows your browser's color preference, and can also be toggled on/off with a button in the upper right corner (but this toggle doesn't save for subsequent next page loads).

Convert many hex codes to HSL, and refactor CSS color rules to be scheme-friendly and a bit more DRY. Accordingly, some colors in the light/default theme have been changed slightly.

<select> fields don't seem to display well with a customized hover background color, so they now use a hover border color instead.

Links now have a hover color.

Remove -moz/-webkit-border-radius, -moz/-webkit-box-shadow, img/bg-container.png, and the `a.button` styling since they didn't seem to be doing anything for us anymore.

--- a/project/images/static/css/image.css
+++ b/project/images/static/css/image.css
@@ -1,7 +1,7 @@
 #nav_image li a {
-    background: hsl(120, 31%, 68%);
+    background: var(--nav-button-image-color);
 }
 #nav_image li a:hover span,
 #nav_image li a:active span {
-    background-color: hsl(120, 55%, 66%);
+    background-color: var(--nav-button-image-hover-color);
 }
