--- a/project/sources/static/css/source.css
+++ b/project/sources/static/css/source.css
@@ -1,15 +1,15 @@
 #nav_source li a {
-    background: hsl(240, 31%, 68%);
+    background: var(--nav-button-source-color);
 }
 #nav_source li a:hover span,
 #nav_source li a:active span {
-    background-color: hsl(240, 55%, 66%);
+    background-color: var(--nav-button-source-hover-color);
 }
 
 
-/* Used for grey boxes on source main page */
+/* Used for content boxes on source main page */
 div.detail-box {
-    background-color: hsl(30, 10%, 80%);
+    background-color: var(--content-box-color);
     border: 1px solid black;
     padding: 10px;
     margin: 5px;
