Calcify rate table management: Add the word 'custom' to a few places, and improve vertical alignment.

--- a/project/calcification/templates/calcification/manage_tables.html
+++ b/project/calcification/templates/calcification/manage_tables.html
@@ -2,7 +2,7 @@
 
 {% if can_manage_source_data %}
   <div class="line">
-    <button id="new-rate-table-form-show-button">+ Upload a new table</button>
+    <button id="new-rate-table-form-show-button">+ Upload a custom table</button>
   </div>
 {% endif %}
 
@@ -11,7 +11,7 @@
 <div hidden>
   <div id="new-rate-table-form-popup">
     <div class="line">
-      If you want to create a rate table for this source, we recommend you start off with a template table by clicking the "Download CSV (labelset entries only)" button next to one of the default tables.
+      If you want to create a custom rate table for this source, we recommend you start off with a template table by clicking the "Download CSV (labelset entries only)" button next to one of the default tables.
     </div>
 
     <form id="new-rate-table-form"
