Add page for conveying background-job status with various stats.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -167,9 +167,17 @@
             to 'I'm curious about the site in general.'
             {% endcomment %}
             <li><a href="{% url 'pages:help' %}"><span>Help</span></a></li>
+
             <li><a href="{{ forum_link }}"><span>Forum</span></a></li>
+
+            {% if user.is_authenticated %}
+              <li><a href="{% url 'jobs:status' %}"><span>Status</span></a></li>
+            {% endif %}
+
             <li><a href="{% url 'blog:post_list' %}"><span>Blog</span></a></li>
+
             <li><a href="{% url 'about' %}"><span>About</span></a></li>
+
             <li><a href="https://github.com/coralnet/coralnet"><span>GitHub</span></a></li>
           </ul>
         </div>
