--- a/project/static/css/master.css
+++ b/project/static/css/master.css
@@ -400,12 +400,16 @@ kbd {
 }
 
 sub {
-  vertical-align: sub;
-  font-size: smaller;
+    vertical-align: sub;
+    font-size: smaller;
 }
 sup {
-  vertical-align: super;
-  font-size: smaller;
+    vertical-align: super;
+    font-size: smaller;
+}
+
+.tooltip {
+    cursor: help;
 }
 
 
