--- a/project/lib/templates/lib/admin_tools.html
+++ b/project/lib/templates/lib/admin_tools.html
@@ -17,6 +17,7 @@
     <ul>
       <li><a href="{% url 'jobs:summary' %}">All jobs</a></li>
       <li><a href="{% url 'api_management:job_list' %}">API jobs</a></li>
+      <li><a href="{% url 'jobs:status' %}">Job processing status</a></li>
       <li><a href="{% url 'backend_overview' %}">Backend overview</a></li>
     </ul>
   </li>
