Job status page: add stats and a graph of incomplete-job count.
The code for the graph values isn't great and could use refactoring later...

--- a/project/jobs/static/css/jobs.css
+++ b/project/jobs/static/css/jobs.css
@@ -36,3 +36,8 @@
 #job-summary tr#all-jobs-summary td:not(.summary-name) {
   font-weight: bold;
 }
+
+#incomplete-count-graph {
+  width: 600px;
+  height: 250px;
+}
