Job lists: add filtering by job type (name) or job queue.
And refactor adjacent forms/utils to make that possible. Notably, the 'job registry' now tracks details other than just the run-function.

--- a/project/jobs/templates/jobs/job_table.html
+++ b/project/jobs/templates/jobs/job_table.html
@@ -84,7 +84,7 @@
               {% else %}
 
                 <span title="Scheduled to start: {{ job_entry.scheduled_start_date }}">
-                  Been waiting for {{ job_entry.scheduled_start_date|timesince }} to start
+                  Waited for {{ job_entry.scheduled_start_date|timesince }} so far
                 </span>
 
               {% endif %}
