Job list views: Add pagination links to the top, not just the bottom.
But without result counts, since that's redundant with the job-counts-by-status display which is also at the top. (Actually not quite redundant, but slightly conflicting, since * jobs older than 30 days are included... not an important enough conflict to be concerned about, but when you put them side by side it looks weird.)

--- a/project/jobs/templates/jobs/job_table.html
+++ b/project/jobs/templates/jobs/job_table.html
@@ -20,6 +20,8 @@
     <strong>Job counts:</strong> {% include 'jobs/job_summary_line.html' %}
   </div>
 
+  {% include 'pagination_links.html' with page_results=page_results query_string=query_string no_result_count_line="true" %}
+
   <table class="generic" id="job-table">
     <thead>
       <tr>
